Add alert in sendMessage function

--- a/index.html
+++ b/index.html
@@ -443,6 +443,7 @@
   }
 
   async function sendMessage() {
+    alert('send dipanggil');
     if (isLoading) return;
     const input = document.getElementById('messageInput');
     const text = input.value.trim();
