--- a/index.html
+++ b/index.html
@@ -75,17 +75,20 @@
   @keyframes typingDot { 0%, 100% { transform: translateY(0); opacity: 0.4; } 50% { transform: translateY(-6px); opacity: 1; } }
 
   .input-area { position: relative; z-index: 10; padding: 12px 16px 16px; border-top: 1px solid var(--border); background: linear-gradient(0deg, rgba(0,255,247,0.03) 0%, transparent 100%); }
-  .input-wrapper { display: flex; align-items: flex-end; gap: 8px; background: var(--glass); border: 1px solid var(--border); border-radius: 2px; padding: 10px 12px; transition: border-color 0.3s; }
+  .input-wrapper { display: flex; align-items: flex-end; gap: 8px; background: var(--glass); border: 1px solid var(--border); border-radius: 2px; padding: 10px 12px; transition: border-color 0.3s; position: relative;
+    z-index: 20; }
   .input-wrapper:focus-within { border-color: var(--cyan); box-shadow: 0 0 20px rgba(0,255,247,0.1); }
   .input-wrapper textarea { flex: 1; background: transparent; border: none; outline: none; color: var(--cyan); font-family: 'Share Tech Mono', monospace; font-size: 13px; line-height: 1.5; resize: none; min-height: 20px; max-height: 100px; overflow-y: auto; }
   .input-wrapper textarea::placeholder { color: rgba(0,255,247,0.25); }
 
-  .mic-btn { background: transparent; border: 1px solid rgba(0,255,247,0.3); color: rgba(0,255,247,0.5); width: 34px; height: 34px; border-radius: 2px; cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 16px; transition: all 0.2s; flex-shrink: 0; }
+  .mic-btn { background: transparent; border: 1px solid rgba(0,255,247,0.3); color: rgba(0,255,247,0.5); width: 34px; height: 34px; border-radius: 2px; cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 16px; transition: all 0.2s; flex-shrink: 0; position: relative;
+    z-index: 20; }
   .mic-btn:hover { border-color: var(--cyan); color: var(--cyan); }
   .mic-btn.recording { border-color: var(--pink); color: var(--pink); box-shadow: 0 0 15px rgba(255,0,110,0.4); animation: micPulse 0.8s ease-in-out infinite; }
   @keyframes micPulse { 0%, 100% { box-shadow: 0 0 10px rgba(255,0,110,0.3); } 50% { box-shadow: 0 0 25px rgba(255,0,110,0.7); } }
 
-  .send-btn { background: transparent; border: 1px solid var(--cyan); color: var(--cyan); width: 34px; height: 34px; border-radius: 2px; cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 14px; transition: all 0.2s; flex-shrink: 0; }
+  .send-btn { background: transparent; border: 1px solid var(--cyan); color: var(--cyan); width: 34px; height: 34px; border-radius: 2px; cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 14px; transition: all 0.2s; flex-shrink: 0; position: relative;
+    z-index: 20; }
   .send-btn:hover { background: rgba(0,255,247,0.1); }
   .send-btn:disabled { opacity: 0.3; cursor: not-allowed; }
   .input-hint { font-size: 9px; color: rgba(0,255,247,0.2); letter-spacing: 1px; margin-top: 6px; }
