--- a/index.html
+++ b/index.html
@@ -69,20 +69,12 @@ body {
   flex-shrink: 0;
 }
 
-.logo-circle {
-  width: 38px; height: 38px;
-  border: 2px solid var(--cyan); border-radius: 50%;
-  display: flex; align-items: center; justify-content: center;
-  font-family: 'Orbitron', monospace; font-weight: 900; font-size: 15px;
-  color: var(--cyan);
-  animation: pulse 2s ease-in-out infinite;
-  flex-shrink: 0;
-}
 
 .header-title {
   font-family: 'Orbitron', monospace;
   font-size: 20px; font-weight: 900; letter-spacing: 5px;
   color: var(--cyan); text-shadow: 0 0 20px var(--cyan);
+  width: 100%; text-align: center;
 }
 
 /* TICKER */
@@ -276,8 +268,7 @@ body {
 
 <!-- HEADER -->
 <div class="header">
-  <div class="logo-circle">O</div>
-  <div class="header-title">OBAN</div>
+  <div class="header-title">ObanAI 3.0</div>
 </div>
 
 <!-- TICKER -->
