--- a/index.html
+++ b/index.html
@@ -122,15 +122,13 @@ body {
   border-radius: 2px;
 }
 .msg.ai .msg-bubble {
-  background: var(--glass);
-  border: 1px solid var(--border);
-  border-left: 3px solid var(--cyan);
+  background: transparent;
+  border: none;
   color: rgba(0,255,247,0.88);
 }
 .msg.user .msg-bubble {
-  background: rgba(255,0,110,0.07);
-  border: 1px solid rgba(255,0,110,0.18);
-  border-right: 3px solid var(--pink);
+  background: transparent;
+  border: none;
   color: rgba(255,200,215,0.88);
 }
 
