--- a/index.html
+++ b/index.html
@@ -275,7 +275,14 @@ body {
 </div>
 
 <!-- CHAT -->
-<div class="chat" id="chat"></div>
+<div class="chat" id="chat">
+  <div id="welcomeMsg" style="flex:1;display:flex;align-items:center;justify-content:center;text-align:center;padding:20px;">
+    <div>
+      <div style="font-family:'Orbitron',monospace;font-size:14px;color:var(--cyan);letter-spacing:2px;margin-bottom:10px;">HELO, SAYA OBAN</div>
+      <div style="font-size:12px;color:rgba(0,255,247,0.4);letter-spacing:1px;line-height:1.8;">Tanyakan apa saja kepada saya</div>
+    </div>
+  </div>
+</div>
 
 <!-- INPUT -->
 <div class="input-area">
@@ -463,7 +470,9 @@ body {
     busy = true;
     sendBtn.disabled = true;
 
-    addMsg('user', text);
+    const wm = document.getElementById('welcomeMsg');
+if (wm) wm.remove();
+addMsg('user', text);
 
     let ctx = '';
     if (isCryptoQ(text)) {
